<resources>
    <string name="app_name">Fastdraw Plus</string>
    <string name="new_category">New category</string>
    <string name="hide">Hide</string>
    <string name="change_category_icon">Change category icon</string>
    <string name="app_info">App info</string>
    <string name="select_wallpaper">Change wallpaper</string>
    <string name="add_shortcut">Add a shortcut</string>
    <string name="remove_shortcut">Remove shortcut</string>

    <string name="action_wallpaper">Change wallpaper</string>
    <string name="action_shortcut">Add a shortcut</string>
    <string name="action_widget_add">Add a widget</string>
    <string name="action_widget_edit">Edit widget</string>
    <string name="action_hidden_show">Show hidden apps</string>
    <string name="action_hidden_hide">Hide hidden apps</string>
    <string name="action_settings">Open preferences</string>
    <string name="action_notifications">Open notifications drawer</string>
    <string name="action_dont_show_again">Don\'t show again</string>

    <string name="widget_replace">Replace</string>
    <string name="widget_setup">Setup</string>
    <string name="widget_remove">Remove</string>

    <string name="no_app">App not installed</string>
    <string name="no_permission">You did not give Fast Draw permission to call. You can change that in Fast Draw\'s app info.</string>
    <string name="shortcut_launch_file_uri_exposed">FileUriExposedException. Shortcut exposes file:// URI. Please contact app developer.</string>
    <string name="no_intent">Fast Draw is not able to launch this app or shortcut :( Please report this problem :)</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Fast Draw Preferences</string>

    <string name="pref_header_general">General</string>
    <string name="pref_title_allowOrientation">Allow rotation</string>
    <string name="pref_description_allowOrientation">Allow changing orientation between portrait and landscape</string>
    <string name="pref_title_switchToHome">Start with Home</string>
    <string name="pref_description_switchToHome">Switch to the Home category when opening the launcher</string>
    <string name="pref_title_headerbtm">Place tabs on bottom</string>
    <string name="pref_description_headerbtm">Place category tabs on the bottom of the screen instead of on the top</string>
    <string name="pref_title_scrollableTabs">Scrollable tabs</string>
    <string name="pref_description_scrollableTabs">If you have a lot of categories (experimental)</string>
    <string name="pref_title_clearDontShowAgain">Restore dismissed messages</string>
    <string name="pref_description_clearDontShowAgain">Restore pop-up messages that were set to not show again.</string>

    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_title_wallpaperParallax">Wallpaper parallax</string>
    <string name="pref_description_wallpaperParallax">Move wallpaper when switching categories</string>
    <string name="pref_title_headerDivider">Show tabs divider</string>
    <string name="pref_description_headerDivider">Display a white line between the tabs and the apps</string>
    <string name="pref_title_bgGradientColorFromWallpaper">Background shadow color from wallpaper</string>
    <string name="pref_description_bgGradientColorFromWallpaper">Color the background shadow based on the color of your wallpaper (requires Android Oreo or newer)</string>
    <string name="pref_title_bgGradientOpacity">Background shadow opacity</string>

    <string name="pref_title_globalIconPack">Icon pack</string>
    <string name="pref_title_hideAppTitles">Hide app titles</string>
    <string name="pref_description_hideAppTitles">Hide app names in the launcher</string>
    <string name="pref_title_iconSizeMultiplier">Icon size</string>

    <string name="icon_size_small">Small</string>
    <string name="icon_size_medium">Medium</string>
    <string name="icon_size_large">Large</string>
    <string name="icon_size_huge">Huge</string>
    <string name="system_default">System default</string>

    <string name="action_edit_icon">Edit icon</string>
    <string name="select_icon">Select icon</string>

    <string name="pref_header_categoryorder">Order of categories</string>
    <string name="pref_title_orderreset">Order alphabetically</string>

    <string name="error_oreo_user_handle">User is locked or not running</string>
    <string name="error_oreo_activity_not_found">Activity does not exist</string>
    <string name="error_oreo_shortcuts_security">Can\'t load shortcut because Fast Draw is not the default launcher</string>
    <string name="error_oreo_shortcut_host_permission">Fast Draw doesn\'t have shortcut host permission. Make sure Fast Draw is the default launcher.</string>

    <string name="error_launch_exception">Can\'t launch item due to an unknown error. Please report this issue.</string>
    <string name="error_expand_notifications_panel">Can\'t open the notifications panel. Perhaps your Android version doesn\'t support this for third party launchers.</string>
</resources>
