<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="@bool/default_wallpaperParallax"
        android:key="wallpaperParallax"
        android:title="@string/pref_title_wallpaperParallax"
        android:summary="@string/pref_description_wallpaperParallax" />

    <SwitchPreference
        android:defaultValue="@bool/default_headerDivider"
        android:key="headerDivider"
        android:title="@string/pref_title_headerDivider"
        android:summary="@string/pref_description_headerDivider" />

    <SwitchPreference
        android:defaultValue="@bool/default_bgGradientColorFromWallpaper"
        android:key="bgGradientColorFromWallpaper"
        android:disableDependentsState="true"
        android:title="@string/pref_title_bgGradientColorFromWallpaper"
        android:summary="@string/pref_description_bgGradientColorFromWallpaper" />

    <SeekBarPreference
        android:defaultValue="@integer/default_bgGradientOpacity"
        app:min="0"
        android:max="255"
        android:key="bgGradientOpacity"
        android:title="@string/pref_title_bgGradientOpacity" />

    <ListPreference
        android:key="globalIconPack"
        android:title="@string/pref_title_globalIconPack"
        android:defaultValue="" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="hideAppTitles"
        android:title="@string/pref_title_hideAppTitles"
        android:summary="@string/pref_description_hideAppTitles" />

    <ListPreference
        android:key="iconSizeMultiplier"
        android:title="@string/pref_title_iconSizeMultiplier"
        android:entries="@array/icon_size_entries"
        android:entryValues="@array/icon_size_values"
        android:defaultValue="1.0" />

</PreferenceScreen>
