<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.vmg265.fastdrawplus.fork.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_pref_general"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.vmg265.fastdrawplus.fork.activities.SettingsActivity$AppearancePreferenceFragment"
        android:icon="@drawable/ic_pref_appearance"
        android:title="@string/pref_header_appearance" />

    <header
        android:fragment="com.vmg265.fastdrawplus.fork.activities.SettingsActivity$CategoryOrderPreferenceFragment"
        android:icon="@drawable/ic_pref_categoryorder"
        android:title="@string/pref_header_categoryorder" />

</preference-headers>
